--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
 </head>
 <body>
 
-<h1>TWelcome!</h1>
+<h1>Welcome!</h1>
 <p>This is my page.</p>
-
+  
+<h2>Qualifications</h2>
+  
+<div>
+  <ul>Sycamore ACM</ul>
+  <ul>UC Cybersec</ul>
+  <ul></ul>
+</div>
+  
 </body>
 </html>
