--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
 <div>
   <ul>Sycamore ACM</ul>
-  <ul>UC Cybersec</ul>
+  <ul><a href="https://cech.uc.edu/it/GenCyber.html">GenCyber UC Cybersecurity 2018</a></ul>
   <ul></ul>
 </div>
   
