--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>MSG17's Webzone</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>MSG17's Webzone</title>
 </head>
 <body>
 
